<resources>
    <string name="app_name">XMLParsingDemoRetrofit</string>
    <string name="to">To:</string>
    <string name="enter_recepients">Enter Recepients</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="message">Message</string>
    <string name="enter_message_here">Enter Message Here</string>
    <string name="send_email">Send Email</string>
</resources>
